[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/main_menu/sub_menus/SubMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/LG_50_shadow.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/main_menu/random_mover/RandomMover.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/main_menu/sub_menus/score_menu/score_menu.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/LG_60_shadow.tres" type="DynamicFont" id=5]

[node name="ScoreMenu" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="RichTextLabel" parent="." index="0"]
bbcode_text = ""
text = ""

[node name="BestPosition" type="Position2D" parent="." index="2"]
position = Vector2( 136, 64 )

[node name="Mover" parent="BestPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8

[node name="BestLabel" type="RichTextLabel" parent="BestPosition/Mover" index="1"]
margin_left = -136.0
margin_right = 152.0
margin_bottom = 50.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]Best[/center]"
text = "Best"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BestNPosition" type="Position2D" parent="." index="3"]
position = Vector2( 136, 128 )

[node name="Mover" parent="BestNPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8
_travel_time = 6.0

[node name="BestNLabel" type="RichTextLabel" parent="BestNPosition/Mover" index="1"]
margin_left = -136.0
margin_right = 152.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeanPosition" type="Position2D" parent="." index="4"]
position = Vector2( 136, 64 )

[node name="Mover" parent="MeanPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8

[node name="MeanLabel" type="RichTextLabel" parent="MeanPosition/Mover" index="1"]
margin_left = 152.0
margin_right = 440.0
margin_bottom = 50.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]Mean[/center]"
text = "Mean"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MeanNPosition" type="Position2D" parent="." index="5"]
position = Vector2( 136, 128 )

[node name="Mover" parent="MeanNPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8
_travel_time = 6.0

[node name="MeanNLabel" type="RichTextLabel" parent="MeanNPosition/Mover" index="1"]
margin_left = 152.0
margin_right = 440.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayedGamesPosition" type="Position2D" parent="." index="6"]
position = Vector2( 136, 288 )

[node name="Mover" parent="PlayedGamesPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8

[node name="PlayedGamesLabel" type="RichTextLabel" parent="PlayedGamesPosition/Mover" index="1"]
margin_left = -136.0
margin_right = 440.0
margin_bottom = 50.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]Runs[/center]"
text = "Runs"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayedGamesNPosition" type="Position2D" parent="." index="7"]
position = Vector2( 136, 352 )

[node name="Mover" parent="PlayedGamesNPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8
_travel_time = 6.0

[node name="PlayedGamesNLabel" type="RichTextLabel" parent="PlayedGamesNPosition/Mover" index="1"]
margin_left = -136.0
margin_right = 440.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHeightPosition" type="Position2D" parent="." index="8"]
position = Vector2( 136, 512 )

[node name="Mover" parent="MaxHeightPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8

[node name="MaxHeightLabel" type="RichTextLabel" parent="MaxHeightPosition/Mover" index="1"]
margin_left = -136.0
margin_right = 440.0
margin_bottom = 50.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]Max height[/center]"
text = "Max height"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHeightPosition2" type="Position2D" parent="." index="9"]
position = Vector2( 136, 576 )

[node name="Mover" parent="MaxHeightPosition2" index="0" instance=ExtResource( 3 )]
_max_dist = 8
_travel_time = 6.0

[node name="MaxHeightNLabel" type="RichTextLabel" parent="MaxHeightPosition2/Mover" index="1"]
margin_left = -136.0
margin_right = 440.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxBlockBreakPosition" type="Position2D" parent="." index="10"]
position = Vector2( 136, 736 )

[node name="Mover" parent="MaxBlockBreakPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8

[node name="MaxBlockLabel" type="RichTextLabel" parent="MaxBlockBreakPosition/Mover" index="1"]
margin_left = -136.0
margin_right = 440.0
margin_bottom = 50.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]Max breaks[/center]"
text = "Max breaks"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxBlockBreakNPosition" type="Position2D" parent="." index="11"]
position = Vector2( 136, 800 )

[node name="Mover" parent="MaxBlockBreakNPosition" index="0" instance=ExtResource( 3 )]
_max_dist = 8
_travel_time = 6.0

[node name="MaxBlockNLabel" type="RichTextLabel" parent="MaxBlockBreakNPosition/Mover" index="1"]
margin_left = -136.0
margin_right = 440.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.498039 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
bbcode_enabled = true
bbcode_text = "[center]0[/center]"
text = "0"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="." index="12"]
